Revert "Tách xác minh OTP thành bước riêng"
This reverts commit c682d63cd3a0546fc7d77d7ab6b0980f69ccfd86.
